_manifest/client/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: spring-app
spec:
  selector:
    matchLabels:
      app: client
  replicas: 2
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: client:1.3.0
          imagePullPolicy: Never
          resources:
            requests:
              memory: "512Mi"
              cpu: "5m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 8080
