_manifest/client/service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: spring-app
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 8080
  type: NodePort
